--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -3,6 +3,8 @@
   padding-right: 40px;
   display: flex;
   justify-content: space-between;
+  padding-bottom: 30px;
+  min-height: 510px;
 }
 
 .contactDiv1 {
@@ -94,6 +96,7 @@
     padding-right: 20px;
     display: block;
     justify-content: none;
+    min-height: 800px;
   }
 
   .contactDiv1 {
@@ -110,7 +113,7 @@
   }
 
   .contactDiv11 {
-    margin-top: 20px;
+    margin-top: 40px;
   }
 
   .contactDiv111 input {
@@ -151,8 +154,8 @@
   }
 
   .map {
-    margin-top: 30px;
-    width: 350px;
-    height: 350px;
+    margin-top: 50px;
+    width: 300px;
+    height: 300px;
   }
 }
