--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -3,6 +3,8 @@
   justify-content: space-between;
   padding-left: 40px;
   padding-right: 90px;
+  padding-bottom: 30px;
+  min-height: 510px;
 }
 
 .homeDiv1 {
